--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
+# Terraform
 .terraform/
 terraform.tfstate*
 *.zip
 *.env*
+
+# Svelte
+.DS_Store
+node_modules
+/build
+/.svelte-kit
+/package
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
