--- a/src/aws/src/scrape/package.json
+++ b/src/aws/src/scrape/package.json
@@ -3,10 +3,11 @@
     "version": "1.0.0",
     "scripts": {},
     "dependencies": {
-        "puppeteer-core": "^20.8.2"
+        "chrome-aws-lambda": "^10.1.0",
+        "puppeteer-core": "^10.4.0"
     },
     "devDependencies": {
-        "dotenv": "^16.3.1",
-        "aws-sdk": "^2.1415.0"
+        "aws-sdk": "^2.1415.0",
+        "dotenv": "^16.3.1"
     }
 }
