--- a/src/extension/package.json
+++ b/src/extension/package.json
@@ -10,6 +10,7 @@
     "test": "plasmo test"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "plasmo": "0.80.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
